--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
-module.exports = {
+{
     "env": {
-        "node": true,
         "commonjs": true,
-        "es6": true
+        "es6": true,
+        "node": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -14,4 +16,4 @@ module.exports = {
     },
     "rules": {
     }
-};
+}
