--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A syncronizer client tool to import crime data to crimemap database.",
   "main": "crime-sync.js",
   "scripts": {
-    "test": "mocha --recursive test/",
+    "test": "istanbul cover node_modules/mocha/bin/_mocha --recursive test/ && codecov -F crimemap_sync_cli",
     "lint": "eslint . test --quiet"
   },
   "keywords": [
@@ -26,12 +26,14 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "child_process": "^1.0.2",
+    "codecov": "^3.6.1",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^6.2.2"
   },
   "dependencies": {
