--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ install:
 script:
   - yarn lint
   - yarn test
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
   - codecov
