--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A syncronizer client tool to import crime data to crimemap database.",
   "main": "crime-sync.js",
   "scripts": {
-    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && codecov -F crimemap_sync_cli",
+    "test": "mocha --recursive test/",
     "lint": "eslint . test --quiet"
   },
   "keywords": [
