--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "crime-sync.js",
   "scripts": {
     "lint": "eslint . test --quiet",
-    "test": "nyc --reporter=lcov mocha --recursive test/"
+    "test": "nyc --reporter=lcov mocha --recursive --exit test/"
   },
   "keywords": [
     "sync",
@@ -34,11 +34,23 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.2.2",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^8.0.1"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "chalk": "^2.4.2",
-    "commander": "^3.0.2"
+    "commander": "^3.0.2",
+    "cross-fetch": "^3.0.4",
+    "debug": "^4.1.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0",
+    "npm": "^6.13.4",
+    "readline-sync": "^1.4.10"
   },
   "bin": {
     "crime-sync": "./crime-sync.js"
