--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,12 @@ env:
 
 cache: yarn
 
+services:
+  - docker
+
+before_install:
+  - docker-compose -f docker-compose.test.yml up -d
+
 install:
   - yarn install
   - yarn global add codecov
