--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose -f docker-compose.test.yml up -d
+  - docker-compose -f docker-compose.test.yml up
 
 install:
   - yarn install
