--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crimemap-sync-cli",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "A syncronizer client tool to import crime data to crimemap database.",
   "main": "crime-sync.js",
   "scripts": {
@@ -41,6 +41,7 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
