--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,12 +14,8 @@ services:
     container_name: database
     restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
-      - MONGO_INITDB_ROOT_PASSWORD=mongopwd
-      - MONGO_INITDB_USERNAME=crimemap
-      - MONGO_INITDB_PASSWORD=crimemappwd
-      - MONGO_INITDB_DATABASE=crimemapdb
-      - MONGO_INITDB_TEST_DATABASE=crimemapdb_test
+      MONGO_INITDB_ROOT_USERNAME: 'mongoadmin'
+      MONGO_INITDB_ROOT_PASSWORD: 'mongopwd'
     volumes:
       - database_files:/data/db
       - database_config:/data/configdb
@@ -32,7 +28,15 @@ services:
     image: prsales/crimemap-sync-api:latest
     container_name: api
     environment:
-      - NODE_ENV=testing
+      NODE_ENV: 'testing'
+      CORS_CLIENT_ORIGIN: '*'
+      DB_HOST: 'database'
+      DB_PORT: 27017
+      DB_NAME: 'crimemapdb'
+      DB_USER: 'crimemap'
+      DB_PASS: 'crimemappwd'
+      SYNC_API_ADMIN_USER: 'johndoe'
+      SYNC_API_ADMIN_PASSWORD: 'abc'
     links: 
       - database
     depends_on:
