--- a/package.json
+++ b/package.json
@@ -23,18 +23,33 @@
   "homepage": "https://github.com/paulosales/crimemap-sync-cli#readme",
   "author": "Paulo Rogerio Sales Santos <paulosales@gmail.com>",
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "pretty-quick --staged && yarn test",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.4",
+    "@commitlint/config-angular": "^8.3.4",
+    "@commitlint/config-conventional": "^8.3.4",
     "chai": "^4.2.0",
     "child_process": "^1.0.2",
     "codecov": "^3.6.1",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "3.0.2",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^3.1.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^8.0.1"
   },
@@ -55,5 +70,10 @@
   },
   "bin": {
     "crime-sync": "./crime-sync.js"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
