--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ script:
   - codecov
 deploy:
   provider: npm
-  email: paulosales@gmail.com
-  api_key: $NPM_API_KEY
+  email: "paulosales@gmail.com"
+  api_key: "$NPM_API_KEY"
   on:
     branch: master
     repo: paulosales/crimemap-sync-cli
