--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ deploy:
   email: "paulosales@gmail.com"
   api_key: "$NPM_API_KEY"
   on:
+    tags: true
     branch: master
     node_js: "13"
     repo: paulosales/crimemap-sync-cli
